# realestate-trafficjam-area-classifier

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/data/: make_table.py  pull_nyc_speed.py
src/feats/: build.py
src/models/: eval_models.py  train_models.py
src/utils/: helpers.py
tests/: test_smoke.py
